feat(simple-crud): add ModelOperator